--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0"
   },
