--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-alert-notification": "^0.4.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
@@ -42,6 +43,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
